# Kozax

./: .gitignore  LICENSE  LICENSE.md  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  train.ipynb  utils.py
Kozax/: genetic_programming.py
Kozax/evaluators/: SR_evaluator.py  dynamic_evaluate.py  static_evaluate.py
Kozax/genetic_operators/: crossover.py  initialization.py  mutation.py  reproduction.py
MultiTreeGP/: genetic_programming.py
MultiTreeGP/evaluators/: SR_evaluator.py  dynamic_evaluate.py  static_evaluate.py
MultiTreeGP/genetic_operators/: crossover.py  initialization.py  mutation.py  reproduction.py
environments/: base_environment.py  harmonic_oscillator.py
evaluators/: base_evaluator.py  sho_evaluator.py
examples/: DynamicPolicy.ipynb  README.md  StaticPolicy.ipynb  SymbolicRegression.ipynb  control_policy_optimization.ipynb  control_policy_with_memory.ipynb  objective_function_optimization.ipynb  symbolic_regression.ipynb
examples/example_notebooks/: README.md  control_policy_optimization.ipynb  control_policy_optimization_with_memory.ipynb  control_with_memory_SHO.ipynb  control_with_memory_acrobot.ipynb  objective_function_optimization.ipynb  symbolic_regression_dynamical_system.ipynb
examples/example_scripts/: control_policy_optimization.py  control_policy_optimization_with_memory.py  control_with_memory_SHO.py  control_with_memory_acrobot.py  objective_function_optimization.py  symbolic_regression_dynamical_system.py
kozax/: __init__.py  genetic_programming.py
kozax/evaluators/: SR_evaluator.py  static_evaluate.py
(+43 files in other folders)
